更新文章结构及样式

--- a/_posts/2024-03-08-kotlin基础-基础语法.md
+++ b/_posts/2024-03-08-kotlin基础-基础语法.md
@@ -1,12 +1,12 @@
 ---
 layout: post
 title: Kotlin基础——基础语法
-category: Kotlin
+categories: [Kotlin, 基础篇]
 tags: Kotlin Android
 typora-root-url: "./.."
 date: 2024-03-08 23:10 +0800
 ---
-## 基础语法
+## 开始
 
 kotlin的主程序代码结构如下所示
 
