--- a/_posts/2024-03-08-kotlin基础-开始.md
+++ b/_posts/2024-03-08-kotlin基础-开始.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Kotlin基础——开始
-category: Kotlin
+categories: [Kotlin, 基础篇]
 tags: Kotlin Android
 typora-root-url: "./.."
 date: 2024-03-08 23:10 +0800
@@ -12,6 +12,13 @@ date: 2024-03-08 23:10 +0800
 
 ## 文章导航
 
-1.   [基本语法]({% post_url 2024-03-08-kotlin基础-基础语法 %})
-2.   ...later...
+### 基础篇
+1.   [基础语法]({% post_url 2024-03-08-kotlin基础-基础语法 %})
+2.   [类与对象]({% post_url 2024-03-09-kotlin基础-类与对象 %})
+
+### 高级篇
+1.   [泛型]({% post_url 2024-03-10-kotlin高级-泛型 %})
+2.   [委托]({% post_url 2024-03-10-kotlin高级-委托 %})
+
+
 
