更新：Kotlin基础——函数

--- a/_posts/2024-03-08-kotlin基础-开始.md
+++ b/_posts/2024-03-08-kotlin基础-开始.md
@@ -15,6 +15,7 @@ date: 2024-03-08 23:10 +0800
 ### 基础篇
 1.   [基础语法]({% post_url 2024-03-08-kotlin基础-基础语法 %})
 2.   [类与对象]({% post_url 2024-03-09-kotlin基础-类与对象 %})
+3.   [函数]({% post_url 2024-03-10-kotlin基础-函数 %})
 
 ### 高级篇
 1.   [泛型]({% post_url 2024-03-10-kotlin高级-泛型 %})
