--- a/_posts/2024-03-10-kotlin基础-函数.md
+++ b/_posts/2024-03-10-kotlin基础-函数.md
@@ -45,7 +45,7 @@ fun add(a: Int, b: Int = 10, c: Int): Int {
 add(10, 5, c = 20) // 默认值参数和它之前的参数可以按顺序传值，默认值之后的参数必须具名参数传值
 ```
 
-### Unit
+## Unit
 
 Unit类似于void，表示不需要返回值，若不指定返回值类型，默认为Unit
 
@@ -58,7 +58,7 @@ fun method() { // 返回Unit
 }
 ```
 
-### 单表达式函数
+## 单表达式函数
 
 当一个函数中只有一个表达式时，可以简化语法
 
@@ -69,7 +69,7 @@ fun add(a: Int, b: Int) = a + b
 // 函数代码块不支持返回值类型推断
 ```
 
-### 可变参数
+## 可变参数
 
 可变参数使用vararg关键字修饰，作为参数数组使用
 
@@ -80,7 +80,7 @@ fun method(a: Int, vararg b: Int, c: Int) {
 method(2, 3,4,5,6, c = 10) // 可变参数和它之前的参数按顺序传值，可变参数之后的参数必须具名参数传值
 ```
 
-### 中缀表示法
+## 中缀表示法
 
 使用infix关键字声明的函数可以使用中缀表达式形式，即`a op b`，等价于`a.op(b)`
 
