更新：Kotlin集合与反射

--- a/_posts/2024-03-08-stl函数笔记.md
+++ b/_posts/2024-03-08-stl函数笔记.md
@@ -3,7 +3,7 @@ layout: post
 title: STL函数笔记
 category: C/C++
 tags: C/C++ STL
-typora-root-url: "./.."
+typora-root-url: ./..
 date: 2024-03-08 20:08 +0800
 ---
 ## 前言
