--- a/_posts/2024-03-09-kotlin基础-类与对象.md
+++ b/_posts/2024-03-09-kotlin基础-类与对象.md
@@ -3,7 +3,7 @@ layout: post
 title: Kotlin基础——类与对象
 categories: [Kotlin, 基础篇]
 tags: Kotlin Android
-typora-root-url: "../."
+typora-root-url: ./..
 date: 2024-03-09 19:33 +0800
 ---
 ## 开始
