--- a/_posts/2024-03-10-kotlin基础-函数.md
+++ b/_posts/2024-03-10-kotlin基础-函数.md
@@ -5,7 +5,7 @@ categories:
 - Kotlin
 - 基础篇
 tags: Kotlin Android
-typora-root-url: "./.."
+typora-root-url: ./..
 date: 2024-03-10 20:42 +0800
 ---
 ## 开始
