--- a/_posts/2024-03-08-kotlin基础-基础语法.md
+++ b/_posts/2024-03-08-kotlin基础-基础语法.md
@@ -3,7 +3,7 @@ layout: post
 title: Kotlin基础——基础语法
 categories: [Kotlin, 基础篇]
 tags: Kotlin Android
-typora-root-url: "./.."
+typora-root-url: ./..
 date: 2024-03-08 23:10 +0800
 ---
 ## 开始
