--- a/_posts/2024-03-08-kotlin基础-开始.md
+++ b/_posts/2024-03-08-kotlin基础-开始.md
@@ -3,12 +3,12 @@ layout: post
 title: Kotlin基础——开始
 categories: [Kotlin, 基础篇]
 tags: Kotlin Android
-typora-root-url: "./.."
+typora-root-url: ./..
 date: 2024-03-08 23:10 +0800
 ---
 ## 前言
 
-从学习完Kotlin后，一直想把学习过程中的笔记总结起来发一下，现在总算有时间整理一下以前的笔记了，Kotlin现在可以算是我最喜欢的一门语言了，简洁又优雅~
+自从学习完Kotlin，一直想把学习过程中的笔记总结起来发一下，现在总算有时间整理一下以前的笔记了，Kotlin现在可以算是我最喜欢的一门语言了，简洁又优雅:heart_eyes::heart_eyes::heart_eyes:，Kotlin现在也正在发展成一门多平台语言，希望Kotlin越来越好:clap::clap::clap:（~~早日取代Java这个老古董~~）
 
 ## 文章导航
 
@@ -19,7 +19,10 @@ date: 2024-03-08 23:10 +0800
 
 ### 高级篇
 1.   [泛型]({% post_url 2024-03-10-kotlin高级-泛型 %})
-2.   [委托]({% post_url 2024-03-10-kotlin高级-委托 %})
+2.   [高阶函数]({% post_url 2024-03-10-kotlin高级-高阶函数 %})
+3.   [集合]({% post_url 2024-03-10-kotlin高级-集合 %})
+4.   [委托]({% post_url 2024-03-10-kotlin高级-委托 %})
+5.   [反射]({% post_url 2024-03-10-kotlin高级-反射 %})
 
 
 
