--- a/_posts/2024-03-08-kotlin基础-开始.md
+++ b/_posts/2024-03-08-kotlin基础-开始.md
@@ -10,19 +10,20 @@ date: 2024-03-08 23:10 +0800
 
 自从学习完Kotlin，一直想把学习过程中的笔记总结起来发一下，现在总算有时间整理一下以前的笔记了，Kotlin现在可以算是我最喜欢的一门语言了，简洁又优雅:heart_eyes::heart_eyes::heart_eyes:，Kotlin现在也正在发展成一门多平台语言，希望Kotlin越来越好:clap::clap::clap:（~~早日取代Java这个老古董~~）
 
+![banner](/assets/img/2024-03-08-kotlin基础-开始/banner.jpg)
+
 ## 文章导航
 
 ### 基础篇
-1.   [基础语法]({% post_url 2024-03-08-kotlin基础-基础语法 %})
-2.   [类与对象]({% post_url 2024-03-09-kotlin基础-类与对象 %})
-3.   [函数]({% post_url 2024-03-10-kotlin基础-函数 %})
+1.   [基础语法]({% post_url 2024-03-08-kotlin基础-基础语法 %})：Null safety is all you need.:yum::yum::yum:
+2.   [类与对象]({% post_url 2024-03-09-kotlin基础-类与对象 %})：Kotlin基础中的基础，必看:exclamation::exclamation::exclamation:
+3.   [函数]({% post_url 2024-03-10-kotlin基础-函数 %})：Kotlin基础中的基础，必看:exclamation::exclamation::exclamation:
 
 ### 高级篇
-1.   [泛型]({% post_url 2024-03-10-kotlin高级-泛型 %})
-2.   [高阶函数]({% post_url 2024-03-10-kotlin高级-高阶函数 %})
-3.   [集合]({% post_url 2024-03-10-kotlin高级-集合 %})
-4.   [委托]({% post_url 2024-03-10-kotlin高级-委托 %})
-5.   [反射]({% post_url 2024-03-10-kotlin高级-反射 %})
-
-
+1.   [泛型]({% post_url 2024-03-10-kotlin高级-泛型 %})：JVM的通病？更加优雅的Kotlin:v::v::v:
+2.   [高阶函数]({% post_url 2024-03-10-kotlin高级-高阶函数 %})：Kotlin之精髓，It makes Kotlin Kotlin，必看:exclamation::exclamation::exclamation:
+3.   [集合]({% post_url 2024-03-10-kotlin高级-集合 %})：实用之Kotlin:sunglasses::sunglasses::sunglasses:
+4.   [委托]({% post_url 2024-03-10-kotlin高级-委托 %})：不常用的好设计？
+5.   [反射]({% post_url 2024-03-10-kotlin高级-反射 %})：Kotlin的遗憾是什么？
+6.   协程（编辑中，敬请期待）
 
