--- a/_posts/2024-03-10-kotlin高级-泛型.md
+++ b/_posts/2024-03-10-kotlin高级-泛型.md
@@ -101,3 +101,32 @@ class Person<T> where T : A, T : B
 
 -   当容器在**消费场景**时，容器需要被读取，因此外部需要使用一个父类引用接收读取值，因此容器泛型使用协变声明，确保容器内的值都是外部声明类型的子类，可以安全接收
 -   当容器在**生产场景**时，容器需要被写入，因此容器内需要使用一个父类引用接收写入值，因此容器泛型使用逆变声明，确保写入值都是容器声明类型的子类，可以安全写入
+
+## 具体化泛型参数
+
+用于解决获取泛型参数的运行时类型问题
+
+获取泛型的运行时类型场景
+
+-   序列化和反序列化
+-   数据库操作
+-   自定义注解
+-   泛型类型检查
+
+kotlin和java在运行时会进行类型擦除，因此无法在运行时获取泛型的实际类型
+
+-   java可以通过反射获取
+-   kotlin使用reified+inline实现
+
+``` kotlin
+// inline+reified
+inline fun <reified T> TreeNode.findParentOfType(): T? {
+    var p = parent
+    // T 可以作为类型，用于检查和转换
+    while (p != null && p !is T) {
+        p = p.parent
+    }
+    return p as T?
+}
+```
+
