--- a/_posts/2024-03-15-二叉树的遍历.md
+++ b/_posts/2024-03-15-二叉树的遍历.md
@@ -10,7 +10,9 @@ date: 2024-03-15 21:25 +0800
 
 二叉树的遍历是二叉树的基础算法，本文对个人的遍历写法做个记录
 
-## 递归遍历
+## 深度优先遍历
+
+### 递归写法
 
 递归遍历比较简单，不作讲解和注释
 
@@ -43,11 +45,11 @@ void postorder(Node* node) {
 }
 ```
 
-## 非递归遍历
+### 非递归写法
 
 三种遍历的非递归写法难以统一的原因是在栈的遍历过程中，在处理当前节点时还需要指针去索引另一个访问节点，这里记录一个统一的迭代写法，将两种节点都放入栈中，但是在处理的当前节点后放入一个null与访问节点区分，这种写法在三种遍历上只需要改动顺序
 
-### 前序遍历
+#### 前序遍历
 
 ``` c++
 vector<Node*> preorder(Node* root) {
@@ -81,7 +83,7 @@ vector<Node*> preorder(Node* root) {
 }
 ```
 
-### 中序遍历
+#### 中序遍历
 
 ```c++
 vector<Node*> inorder(Node* root) {
@@ -107,7 +109,7 @@ vector<Node*> inorder(Node* root) {
 }
 ```
 
-### 后序遍历
+#### 后序遍历
 
 ```c++
 vector<Node*> postorder(Node* root) {
@@ -129,6 +131,56 @@ vector<Node*> postorder(Node* root) {
             res.push_back(node);
         }
     }
+    return res;
+}
+```
+
+## 层次遍历
+
+层次遍历写法较简单，要注意它的应用，灵活变化
+
+### 非递归写法
+
+```c++
+vector<vector<Node*>> levelorder(Node* root) {
+    queue<Node*> q;
+    // 每一层是一个vector
+    vector<vector<Node*>> res;
+    if (!root) q.push(root);
+    while (!q.empty()) {
+        // 当前层宽度
+        int size = q.size();
+        vector<Node*> level;
+        for (int i = 0; i < size; i++) {
+            Node* node = q.front();
+            q.pop();
+            level.push_back(node);
+            if (node->left) q.push(node->left);
+            if (node->right) q.push(node->right);
+        }
+        res.push_back(level);
+    }
+    return res;
+}
+```
+
+### 递归写法
+
+使用前序遍历，通过深度索引到相应的层数组再添加，根节点的深度为0
+
+```c++
+void levelorder(Node* node, vector<vector<Node*>>& res, int depth) {
+    if (!node) return;
+    // 到达最后一层的下一层时，若还有节点，创建数组
+    if (res.size() == depth) res.push_back(new vector<Node*>());
+    res[depth].push_back(node);
+    levelorder(node->left, res, depth + 1);
+    levelorder(node->right, res, depth + 1);
+}
+
+vector<vector<Node*>> level(Node* root) {
+    vector<vector<Node*>> res;
+    levelorder(root, res, 0);
     return res;
 }
 ```
