--- a/_posts/2024-03-15-二叉树的遍历.md
+++ b/_posts/2024-03-15-二叉树的遍历.md
@@ -89,7 +89,7 @@ vector<Node*> preorder(Node* root) {
 vector<Node*> inorder(Node* root) {
     vector<Node*> res;
     stack<Node*> stack;
-    if (!root) stack.push(root);
+    if (root) stack.push(root);
     while (!stack.empty()) {
         Node* node = stack.top();
         if (node) {
@@ -115,7 +115,7 @@ vector<Node*> inorder(Node* root) {
 vector<Node*> postorder(Node* root) {
     vector<Node*> res;
     stack<Node*> stack;
-    if (!root) stack.push(root);
+    if (root) stack.push(root);
     while (!stack.empty()) {
         Node* node = stack.top();
         if (node) {
@@ -146,7 +146,7 @@ vector<vector<Node*>> levelorder(Node* root) {
     queue<Node*> q;
     // 每一层是一个vector
     vector<vector<Node*>> res;
-    if (!root) q.push(root);
+    if (root) q.push(root);
     while (!q.empty()) {
         // 当前层宽度
         int size = q.size();
