修改配置，开启评论功能

--- a/_posts/2024-03-08-kotlin基础-开始.md
+++ b/_posts/2024-03-08-kotlin基础-开始.md
@@ -5,12 +5,12 @@ categories: [Kotlin, 基础篇]
 tags: Kotlin Android
 typora-root-url: ./..
 date: 2024-03-08 23:10 +0800
+image:
+  path: /assets/img/2024-03-08-kotlin基础-开始/banner.jpg
 ---
 ## 前言
 
 自从学习完Kotlin，一直想把学习过程中的笔记总结起来发一下，现在总算有时间整理一下以前的笔记了，Kotlin现在可以算是我最喜欢的一门语言了，简洁又优雅:heart_eyes::heart_eyes::heart_eyes:，Kotlin现在也正在发展成一门多平台语言，希望Kotlin越来越好:clap::clap::clap:（~~早日取代Java这个老古董~~）
-
-![banner](/assets/img/2024-03-08-kotlin基础-开始/banner.jpg)
 
 ## 文章导航
 
