--- a/_posts/2024-03-08-stl函数笔记.md
+++ b/_posts/2024-03-08-stl函数笔记.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: STL函数笔记
-category: C/C++
+categories: C/C++
 tags: C/C++ STL
 typora-root-url: ./..
 date: 2024-03-08 20:08 +0800
