--- a/_posts/2024-03-10-kotlin高级-泛型.md
+++ b/_posts/2024-03-10-kotlin高级-泛型.md
@@ -3,7 +3,7 @@ layout: post
 title: Kotlin高级——泛型
 categories: [Kotlin, 高级篇]
 tags: Kotlin Android
-typora-root-url: "./.."
+typora-root-url: ./..
 date: 2024-03-10 20:25 +0800
 ---
 ## 开始
