--- a/_posts/2024-03-09-kotlin基础-类与对象.md
+++ b/_posts/2024-03-09-kotlin基础-类与对象.md
@@ -5,6 +5,8 @@ categories: [Kotlin, 基础篇]
 tags: Kotlin Android
 typora-root-url: ./..
 date: 2024-03-09 19:33 +0800
+image:
+  path: /assets/img/2024-03-08-kotlin基础-开始/banner.jpg
 ---
 ## 开始
 
