--- a/_posts/2024-03-10-kotlin高级-集合.md
+++ b/_posts/2024-03-10-kotlin高级-集合.md
@@ -7,6 +7,8 @@ categories:
 tags: Kotlin Android
 typora-root-url: ./..
 date: 2024-03-10 23:13 +0800
+image:
+  path: /assets/img/2024-03-08-kotlin基础-开始/banner.jpg
 ---
 ## 开始
 
@@ -132,7 +134,7 @@ iterator.next()  // 保持相对位置，next返回3
 -   调用generateSequence函数，传入一个闭包作为元素生成函数，当生成函数返回null时，生成结束
 
 -   调用sequence函数，传入一个闭包，闭包中只能调用yield和yieldAll函数，用于生成元素
-    
+  
     与generateSequence的不同：generateSequence是将序列创建好后进入流操作，sequence函数是从生成元素就进入流操作，当操作下一个元素时generateSequence不会被调用，而sequence会被调用，由yield产生下一个操作的值，产生后sequence会被暂停
     
     元素生成方法
