--- a/_posts/2024-03-10-kotlin基础-函数.md
+++ b/_posts/2024-03-10-kotlin基础-函数.md
@@ -7,6 +7,8 @@ categories:
 tags: Kotlin Android
 typora-root-url: ./..
 date: 2024-03-10 20:42 +0800
+image:
+  path: /assets/img/2024-03-08-kotlin基础-开始/banner.jpg
 ---
 ## 开始
 
