--- a/_posts/2024-03-10-kotlin高级-反射.md
+++ b/_posts/2024-03-10-kotlin高级-反射.md
@@ -8,7 +8,7 @@ tags: Kotlin Android
 typora-root-url: ./..
 date: 2024-03-10 22:57 +0800
 image:
-  path: /assets/img/2024-03-08-kotlin基础-开始/banner.jpg
+  path: assets/img/2024-03-08-kotlin基础-开始/banner.jpg
 ---
 ## 开始
 
@@ -27,7 +27,7 @@ Kotlin中可以直接使用java的反射，目前java反射的性能还是高于
 
 kotlin反射与java反射的类结构组成
 
-<img src="/assets/img/kotlin高级-反射/2020090521255954.png" alt="反射类结构图"  />
+<img src="assets/img/kotlin高级-反射/2020090521255954.png" alt="反射类结构图"  />
 
 
 
