--- a/_posts/2024-03-18-回溯算法-理论基础.md
+++ b/_posts/2024-03-18-回溯算法-理论基础.md
@@ -30,7 +30,7 @@ for (int i = 0; i < n; i++) {
 
 实际上它的穷举结果可以抽象成一棵树，如下图所示
 
-![image-20240318184028953](assets/img/回溯算法-理论基础/image-20240318184028953.png)
+![image-20240318184028953](/assets/img/回溯算法-理论基础/image-20240318184028953.png)
 
 那么我们怎么使用递归+for循环实现这个穷举树呢，先给出代码
 
@@ -67,7 +67,7 @@ void trace(int layer, int k) {
 
 我们再来看一下`trace`函数和穷举树的关系，我们在`trace`函数中使用参数k表示穷举树的深度，在每个节点中，for循环的穷举范围就是该节点的所有子状态，也称为宽度。在之后的解题中，分析出树的深度和宽度对我们写程序有很大的帮助，包括在剪枝中，也是围绕着宽度来分析
 
-![回溯算法理论基础](assets/img/回溯算法-理论基础/20210130173631174.png)
+![回溯算法理论基础](/assets/img/回溯算法-理论基础/20210130173631174.png)
 
 ## 回溯算法
 
