--- a/_posts/2024-03-08-kotlin基础-开始.md
+++ b/_posts/2024-03-08-kotlin基础-开始.md
@@ -6,7 +6,7 @@ tags: Kotlin Android
 typora-root-url: ./..
 date: 2024-03-08 23:10 +0800
 image:
-  path: /assets/img/2024-03-08-kotlin基础-开始/banner.jpg
+  path: /assets/img/kotlin基础-开始/banner.jpg
 ---
 ## 前言
 
@@ -25,5 +25,5 @@ image:
 3.   [集合]({% post_url 2024-03-10-kotlin高级-集合 %})：实用之Kotlin:sunglasses::sunglasses::sunglasses:
 4.   [委托]({% post_url 2024-03-10-kotlin高级-委托 %})：不常用的好设计？
 5.   [反射]({% post_url 2024-03-10-kotlin高级-反射 %})：Kotlin的遗憾是什么？
-6.   协程（编辑中，敬请期待）
+6.   [协程]({% post_url 2024-04-13-kotlin高级-协程 %})：更好用的异步编程:sunglasses::sunglasses::sunglasses:
 
