--- a/_posts/2024-03-08-stl函数笔记.md
+++ b/_posts/2024-03-08-stl函数笔记.md
@@ -5,6 +5,8 @@ categories: C/C++
 tags: C/C++ STL
 typora-root-url: ./..
 date: 2024-03-08 20:08 +0800
+image:
+  path: /assets/img/stl函数笔记/STL.png
 ---
 ## 前言
 
