--- a/_posts/2024-04-25-wpf-依赖属性.md
+++ b/_posts/2024-04-25-wpf-依赖属性.md
@@ -127,3 +127,66 @@ Student.SetName(human, "hello");  // 将NameProperty附加到Human
 string name = Student.GetName(human);
 ```
 
+## 自定义组件
+
+通过`UserControl`组件可以自定义组件，使用依赖属性为组件添加自定义属性
+
+C#类实现
+
+-   自定义依赖属性和CLR包装属性
+-   在构造器中设置Root组件的DataContext为当前类this
+
+```c#
+using System.Windows;
+using System.Windows.Controls;
+
+namespace WpfDemo;
+
+public partial class UserControl1 : UserControl {
+
+    public static readonly DependencyProperty AgeProPerty = 
+        DependencyProperty.Register(nameof(Age), typeof(int), typeof(UserControl1), new UIPropertyMetadata());
+
+    public int Age {
+        get => (int)GetValue(AgeProPerty);
+        set => SetValue(AgeProPerty, value);
+    }
+    
+    
+    public UserControl1() {
+        InitializeComponent();
+        Root.DataContext = this;
+    }
+}
+```
+
+xaml基本实现
+
+-   使用`UserControl`组件作为根组件
+-   定义布局组件的id为Root
+-   `d:DataContext`用于在预览调试时定义DataContext
+-   通过Binding绑定到自定义的CLR包装属性
+
+```xml
+<UserControl x:Class="WpfDemo.UserControl1"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:WpfDemo"
+             mc:Ignorable="d"
+             d:DesignHeight="300" d:DesignWidth="300">
+    <Grid x:Name="Root" d:DataContext="{d:DesignInstance local:UserControl1}">
+        <TextBlock Text="{Binding Age}"/>
+    </Grid>
+</UserControl>
+```
+
+外部使用：传入字面量或Binding
+
+```xml
+<local:UserControl1 Age="30"/>
+```
+
+
+
