--- a/_posts/2024-05-17-vue3-pinia.md
+++ b/_posts/2024-05-17-vue3-pinia.md
@@ -28,7 +28,7 @@ const pinia = createPinia();
 app.use(pinia);
 app.mount('#app');
 ```
-{: .file='main.ts' }
+{: file='main.ts' }
 
 ## 数据存储
 
@@ -54,7 +54,7 @@ export const useCountStore = defineStore("count", {
     // }),
 });
 ```
-{: .file='src/store/count.ts' }
+{: file='src/store/count.ts'}
 
 使用store
 
