--- a/_posts/2024-04-25-vue3-模板语法.md
+++ b/_posts/2024-04-25-vue3-模板语法.md
@@ -34,6 +34,29 @@ date: 2024-04-25 21:08 +0800
 
 vue中的指令以`v-`开头，支持HTML元素属性的绑定，使用指令时，引号的部分作为JavaScript表达式处理
 
+### 指令的结构
+
+Vue指令的完整结构由名称、参数、修饰符和值组成
+
+![指令语法图](/assets/img/vue3-模板语法/directive.7WSr6AKH.png)
+
+-   Name：Vue指令以`v-`开头
+
+-   Modifier：修饰符，表示该指令通过特殊方式绑定
+
+-   Argument：指令参数，如`v-bind:id`的参数为id，`v-on:click`的参数为click
+
+    支持动态参数，即使用表达式指定参数，表达式的结果必须为一个字符串，当结果为null时，该属性不生效
+
+    ```html
+    <div v-bind:[attr]="value"></div>
+    <a v-on:[eventName]="doSomething"></a>
+    
+    <!--可简写-->
+    <div :[attr]="value"></div>
+    <a @[eventName]="doSomething"></a>
+    ```
+
 ### 属性绑定
 
 -   使用`v-bind`绑定属性
@@ -98,27 +121,21 @@ vue中的指令以`v-`开头，支持HTML元素属性的绑定，使用指令时
     // <div :style="styleObject"></div>
     ```
 
+### 双向绑定
 
-### 指令的结构
+使用`v-model`指令实现双向绑定
 
-Vue指令的完整结构由名称、参数、修饰符和值组成
+```html
+<input type="text" v-model="value1">
+<!--实际实现-->
+<input type="text" 
+       :value="value1" 
+       @input="value1 = ($event.target as HTMLInputElement).value">
+```
 
-![指令语法图](/assets/img/vue3-模板语法/directive.7WSr6AKH.png)
+从用户输入获取的值默认为字符串，通过修饰符可对字符串进行处理
 
--   Name：Vue指令以`v-`开头
-
--   Modifier：修饰符，表示该指令通过特殊方式绑定
-
--   Argument：指令参数，如`v-bind:id`的参数为id，`v-on:click`的参数为click
-
-    支持动态参数，即使用表达式指定参数，表达式的结果必须为一个字符串，当结果为null时，该属性不生效
-
-    ```html
-    <div v-bind:[attr]="value"></div>
-    <a v-on:[eventName]="doSomething"></a>
-    
-    <!--可简写-->
-    <div :[attr]="value"></div>
-    <a @[eventName]="doSomething"></a>
-    ```
+-   lazy：当输入框失去焦点或按下回车时，才触发数据更新
+-   number：将字符串转换为数字
+-   trim：去除首尾空格
 
