--- a/_posts/2024-05-17-vue3-pinia.md
+++ b/_posts/2024-05-17-vue3-pinia.md
@@ -7,7 +7,7 @@ categories:
 tags:
 - 前端
 - Vue3
-typora-root-url: "./.."
+typora-root-url: ./..
 image:
   path: "/assets/img/vue3-开始/logo.jpeg"
 date: 2024-05-17 16:30 +0800
