--- a/_posts/2024-05-19-vue3-slot.md
+++ b/_posts/2024-05-19-vue3-slot.md
@@ -7,7 +7,7 @@ categories:
 tags:
 - 前端
 - Vue3
-typora-root-url: "./.."
+typora-root-url: ./..
 image:
   path: "/assets/img/vue3-开始/logo.jpeg"
 date: 2024-05-19 15:51 +0800
