feat: mongodb添加背景图

--- a/_posts/2024-05-26-mongodb.md
+++ b/_posts/2024-05-26-mongodb.md
@@ -9,13 +9,15 @@ tags:
 - Database
 typora-root-url: ./..
 date: 2024-05-26 15:39
+image:
+  path: /assets/img/mongodb/logo.jpg
 ---
 
 ## 开始
 
 MongoDB是一个基于文档的NoSQL数据库
 
-官网：[MongoDB: 助力加速创新 | MongoDB](https://www.mongodb.com/zh-cn)
+官网：[MongoDB](https://www.mongodb.com/zh-cn)
 
 官方文档：[MongoDB 文档](https://www.mongodb.com/zh-cn/docs/)
 
