--- a/_posts/2024-05-26-mongodb.md
+++ b/_posts/2024-05-26-mongodb.md
@@ -348,3 +348,63 @@ db.article.aggregate([
 | `$first`    | 根据文档的排序获取第一个文档数据                             |
 | `$last`     | 根据文档的排序获取最后一个文档数据                           |
 
+## 数据库引用
+
+mongodb中不支持连接查询，在文档使用三个特殊字段来引用其他文档
+
+引用的基本格式
+
+```json
+{
+    $ref: "collection_name", 
+    $id: ObjectId("..."), 
+    $db: "db_name" 
+}
+```
+
+e.g. 在user文档中引用address文档
+
+```json
+{
+   "_id": ObjectId("53402597d852426020000002"),
+   "address": {
+       "$ref": "address_home",
+       "$id": ObjectId("534009e4d852427820000002"),
+       "$db": "runoob"
+   },
+   "contact": "987654321",
+   "dob": "01-01-1991",
+   "name": "Tom Benzamin"
+}
+```
+
+在查询时需要分步查询
+
+```
+var user = db.users.findOne({"name":"Tom Benzamin"})
+var dbRef = user.address
+db[dbRef.$ref].findOne({"_id":ObjectId(dbRef.$id)})
+```
+
+## ObjectId
+
+mongodb中默认使用ObjectId对象来作为`_id`字段的值，ObjectId是一个12字节BSON类型数据，有以下格式
+
+-   前4个字节表示时间戳
+-   接下来的3个字节是机器标识码
+-   紧接的2个字节由进程id组成（PID）
+-   最后3个字节是随机数
+
+调用`ObjectId()`创建ObjectId，mongodb会自动生成一个唯一id
+
+```
+var newObjectId = ObjectId()
+```
+
+ObjectId中存储了4个字节的时间戳，`getTimestamp()`来获取时间戳
+
+```
+var myId = ObjectId()
+myId.getTimestamp()
+```
+
