--- a/_posts/2024-06-01-k短路算法.md
+++ b/_posts/2024-06-01-k短路算法.md
@@ -308,3 +308,10 @@ for k in range(1, 9):
 # 第8短路: ( path = [0, 3, 1, 2, 4], dist = 24 )
 ```
 
+## 算法测试
+
+下面是当时实现的地图应用的截图，背景的地图使用的是高德的地图，地图上的地点以及路线均是通过K短路算法计算得到，再使用高德的API绘制在地图上
+
+当前算法在一般情况下的运行效果不错，但当选定的两个地点过近时，计算得到的路径会有环（上面运行的示例结果中有包含环的结果），当前算法没有解决这一点，在应用中实现了一个过滤机制，若某条路径的路程大于等于最短路径路程的两倍，则去除该路径，经过该过滤机制，得出的路径结果已基本满足需求
+
+![test](/assets/img/2024-06-01-k短路算法/test.png)
