--- a/_posts/2024-06-01-k短路算法.md
+++ b/_posts/2024-06-01-k短路算法.md
@@ -314,4 +314,4 @@ for k in range(1, 9):
 
 当前算法在一般情况下的运行效果不错，但当选定的两个地点过近时，计算得到的路径会有环（上面运行的示例结果中有包含环的结果），当前算法没有解决这一点，在应用中实现了一个过滤机制，若某条路径的路程大于等于最短路径路程的两倍，则去除该路径，经过该过滤机制，得出的路径结果已基本满足需求
 
-![test](/assets/img/2024-06-01-k短路算法/test.png)
+![test](/assets/img/k短路算法/test.png)
