--- a/_posts/2024-06-15-机器学习-决策树.md
+++ b/_posts/2024-06-15-机器学习-决策树.md
@@ -52,8 +52,10 @@ $$
 信息增益的划分准则对取值数目较多的属性具有偏好，在C4.5决策树算法中使用增益率作为划分准则
 
 $$
-Gain_ratio(D,a)=\frac{Gain(D,a)}{TV(a)}\\
-IV(a)=-\sum\limits^V_{v=1}\frac{\lvert D^v\rvert}{\lvert D\rvert}\log_2\frac{\lvert D^v\rvert}{\lvert D\rvert}
+\begin{align}
+Gain\_ratio(D,a)&=\frac{Gain(D,a)}{TV(a)}\\
+IV(a)&=-\sum\limits^V_{v=1}\frac{\lvert D^v\rvert}{\lvert D\rvert}\log_2\frac{\lvert D^v\rvert}{\lvert D\rvert}
+\end{align}
 $$
 
 $IV(a)$称为属性a的固有值，属性取值越多，固有值越大，增益率准则对属性取值较少的属性具有偏好
