--- a/_posts/2024-06-15-机器学习-线性模型.md
+++ b/_posts/2024-06-15-机器学习-线性模型.md
@@ -43,9 +43,11 @@ $$
 最小二乘参数估计
 
 $$
-E(\omega,b)=\sum\limits_{i=1}^m(f(x_i)-y_i)^2\\
-\frac{\partial E(\omega,b)}{\partial \omega}=2(\omega\sum\limits_{i=1}^mx_i^2-\sum\limits_{i=1}^m(y_i-b)x_i)\\
-\frac{\partial E(\omega,b)}{\partial b}=2(mb-\sum\limits_{i=1}^m(y_i-\omega x_i))
+\begin{align}
+E(\omega,b)&=\sum\limits_{i=1}^m(f(x_i)-y_i)^2\\
+\frac{\partial E(\omega,b)}{\partial \omega}&=2(\omega\sum\limits_{i=1}^mx_i^2-\sum\limits_{i=1}^m(y_i-b)x_i)\\
+\frac{\partial E(\omega,b)}{\partial b}&=2(mb-\sum\limits_{i=1}^m(y_i-\omega x_i))
+\end{align}
 $$
 
 令两个偏导为0可求得$\omega$和$b$最优解
@@ -61,8 +63,8 @@ $$
 定义向量形式如下
 
 $$
-\hat{\omega}=(\vec{\omega},b)\\
-X=\begin{bmatrix}
+\begin{align}
+X&=\begin{bmatrix}
 x_{11} & x_{12} & \cdots & x_{1d} & 1\\
 x_{21} & x_{22} & \cdots & x_{2d} & 1\\
 \vdots & \vdots & \ddots & \vdots & \vdots\\
@@ -73,14 +75,18 @@ x_{m1} & x_{m2} & \cdots & x_{md} & 1\\
 \vdots & \vdots\\
 \vec{x}_m^T & 1\\
 \end{bmatrix}\\
-\vec{y}=(y_1;y_2;...;y_m)
+\hat{\omega}&=(\vec{\omega},b)\\
+\vec{y}&=(y_1;y_2;...;y_m)
+\end{align}
 $$
 
 由最小二乘法有
 
 $$
-E(\hat{\omega})=(\vec{y}-X\hat{\omega})^T(\vec{y}-X\hat{\omega})\\
-\frac{\partial E(\hat{\omega})}{\partial \omega}=2X^T(X\hat{\omega}-\vec{y})
+\begin{align}
+E(\hat{\omega})&=(\vec{y}-X\hat{\omega})^T(\vec{y}-X\hat{\omega})\\
+\frac{\partial E(\hat{\omega})}{\partial \omega}&=2X^T(X\hat{\omega}-\vec{y})
+\end{align}
 $$
 
 当$X^TX$满秩时，令偏导为0有唯一解，也称为正规方程法
@@ -116,8 +122,10 @@ sigmoid函数将$(-\infty,+\infty)$映射到$(0,1)$之间
 代入线性函数有
 
 $$
-y=\frac{1}{1+e^{-(\omega^Tx+b)}}\\
-\ln\frac{y}{1-y}=\omega^T+b
+\begin{align}
+y&=\frac{1}{1+e^{-(\omega^Tx+b)}}\\
+\ln\frac{y}{1-y}&=\omega^T+b
+\end{align}
 $$
 
 其中$\ln\frac{y}{1-y}$​称为对数几率（logit），反映了正例的相对几率
@@ -125,8 +133,10 @@ $$
 将$y$重写为概率估计，通过极大似然估计可求解参数
 
 $$
-p(y=1\lvert x)=\frac{e^{\omega^Tx+b}}{1+e^{\omega^Tx+b}}\\
-p(y=0\lvert x)=\frac{1}{1+e^{\omega^Tx+b}}
+\begin{align}
+p(y=1\lvert x)&=\frac{e^{\omega^Tx+b}}{1+e^{\omega^Tx+b}}\\
+p(y=0\lvert x)&=\frac{1}{1+e^{\omega^Tx+b}}
+\end{align}
 $$
 
 ## 线性判别分析
