--- a/_posts/2024-06-15-ml-决策树.md
+++ b/_posts/2024-06-15-ml-决策树.md
@@ -32,7 +32,7 @@ date: 2024-06-15 23:20
 通常使用信息熵度量样本集合纯度，设样本集D中第k类样本所占比例为$p_k$，则信息熵定义为
 
 $$
-Ent(D)=-\sum\limits^{\lvert C\rvert}_{k=1}p_k\log_2p_k
+Ent(D)=-\sum\limits^{\vert C\vert}_{k=1}p_k\log_2p_k
 $$
 
 信息熵的值越小，D的分类纯度越高
@@ -42,7 +42,7 @@ $$
 对于一个特定属性a可以计算它的信息增益，设属性a的取值为$a^1,a^2,...,a^V$，所有在属性a上取同一个值的样本的集合为$D^v$，则属性a的信息增益为
 
 $$
-Gain(D,a)=Ent(D)-\sum\limits^V_{v=1}\frac{\lvert D^v\rvert}{\lvert D\rvert}Ent(D^v)
+Gain(D,a)=Ent(D)-\sum\limits^V_{v=1}\frac{\vert D^v\vert}{\vert D\vert}Ent(D^v)
 $$
 
 属性的信息增益越大，使用该属性进行划分获得的纯度提升越大，ID3决策树算法就是使用信息增益作为划分准则
@@ -52,10 +52,10 @@ $$
 信息增益的划分准则对取值数目较多的属性具有偏好，在C4.5决策树算法中使用增益率作为划分准则
 
 $$
-\begin{align}
+\begin{aligned}
 Gain\_ratio(D,a)&=\frac{Gain(D,a)}{TV(a)}\\
-IV(a)&=-\sum\limits^V_{v=1}\frac{\lvert D^v\rvert}{\lvert D\rvert}\log_2\frac{\lvert D^v\rvert}{\lvert D\rvert}
-\end{align}
+IV(a)&=-\sum\limits^V_{v=1}\frac{\vert D^v\vert}{\vert D\vert}\log_2\frac{\vert D^v\vert}{\vert D\vert}
+\end{aligned}
 $$
 
 $IV(a)$称为属性a的固有值，属性取值越多，固有值越大，增益率准则对属性取值较少的属性具有偏好
@@ -65,13 +65,13 @@ $IV(a)$称为属性a的固有值，属性取值越多，固有值越大，增益
 基尼指数反映了从D中随机抽取两个样本，它们不属于同一类的概率，基尼指数越小，样本集纯度越高
 
 $$
-Gini(D)=\sum\limits^{\lvert C\rvert}_{k=1}\sum\limits_{k'\ne k}p_kp_{k'}=1-\sum\limits^{\lvert C\rvert}_{k=1}p_k^2
+Gini(D)=\sum\limits^{\vert C\vert}_{k=1}\sum\limits_{k'\ne k}p_kp_{k'}=1-\sum\limits^{\vert C\vert}_{k=1}p_k^2
 $$
 
 属性a的基尼指数为
 
 $$
-Gini\_index(D,a)=\sum\limits^{\lvert V\rvert}_{v=1}\frac{\lvert D^v\rvert}{\lvert D\rvert}Gini(D^v)
+Gini\_index(D,a)=\sum\limits^{\vert V\vert}_{v=1}\frac{\vert D^v\vert}{\vert D\vert}Gini(D^v)
 $$
 
 ## 剪枝处理
