--- a/_posts/2024-06-15-ml-线性模型.md
+++ b/_posts/2024-06-15-ml-线性模型.md
@@ -43,11 +43,11 @@ $$
 最小二乘参数估计
 
 $$
-\begin{align}
+\begin{aligned}
 E(\omega,b)&=\sum\limits_{i=1}^m(f(x_i)-y_i)^2\\
 \frac{\partial E(\omega,b)}{\partial \omega}&=2(\omega\sum\limits_{i=1}^mx_i^2-\sum\limits_{i=1}^m(y_i-b)x_i)\\
 \frac{\partial E(\omega,b)}{\partial b}&=2(mb-\sum\limits_{i=1}^m(y_i-\omega x_i))
-\end{align}
+\end{aligned}
 $$
 
 令两个偏导为0可求得$\omega$和$b$最优解
@@ -63,7 +63,7 @@ $$
 定义向量形式如下
 
 $$
-\begin{align}
+\begin{aligned}
 X&=\begin{bmatrix}
 x_{11} & x_{12} & \cdots & x_{1d} & 1\\
 x_{21} & x_{22} & \cdots & x_{2d} & 1\\
@@ -77,16 +77,16 @@ x_{m1} & x_{m2} & \cdots & x_{md} & 1\\
 \end{bmatrix}\\
 \hat{\omega}&=(\vec{\omega},b)\\
 \vec{y}&=(y_1;y_2;...;y_m)
-\end{align}
+\end{aligned}
 $$
 
 由最小二乘法有
 
 $$
-\begin{align}
+\begin{aligned}
 E(\hat{\omega})&=(\vec{y}-X\hat{\omega})^T(\vec{y}-X\hat{\omega})\\
 \frac{\partial E(\hat{\omega})}{\partial \omega}&=2X^T(X\hat{\omega}-\vec{y})
-\end{align}
+\end{aligned}
 $$
 
 当$X^TX$满秩时，令偏导为0有唯一解，也称为正规方程法
@@ -117,15 +117,15 @@ $$
 
 sigmoid函数将$(-\infty,+\infty)$映射到$(0,1)$之间
 
-<img src="/assets/img/机器学习-线性模型/image-20240608230240402.png" alt="image-20240608230240402" style="zoom:50%;" />
+<img src="/assets/img/ml-线性模型/image-20240608230240402.png" alt="image-20240608230240402" style="zoom:50%;" />
 
 代入线性函数有
 
 $$
-\begin{align}
+\begin{aligned}
 y&=\frac{1}{1+e^{-(\omega^Tx+b)}}\\
 \ln\frac{y}{1-y}&=\omega^T+b
-\end{align}
+\end{aligned}
 $$
 
 其中$\ln\frac{y}{1-y}$​称为对数几率（logit），反映了正例的相对几率
@@ -133,17 +133,17 @@ $$
 将$y$重写为概率估计，通过极大似然估计可求解参数
 
 $$
-\begin{align}
-p(y=1\lvert x)&=\frac{e^{\omega^Tx+b}}{1+e^{\omega^Tx+b}}\\
-p(y=0\lvert x)&=\frac{1}{1+e^{\omega^Tx+b}}
-\end{align}
+\begin{aligned}
+p(y=1\vert x)&=\frac{e^{\omega^Tx+b}}{1+e^{\omega^Tx+b}}\\
+p(y=0\vert x)&=\frac{1}{1+e^{\omega^Tx+b}}
+\end{aligned}
 $$
 
 ## 线性判别分析
 
 在二分类问题上，线性判别分析（LDA）通过将样本投影到一条直线上，同时使得相同类别的样本的投影点尽可能接近，而不同类别的样本的投影点尽可能远离，确定直线后，将新样本投影到该直线上，根据投影点的位置判定类别
 
-<img src="/assets/img/机器学习-线性模型/image-20240608233543353.png" alt="image-20240608233543353" style="zoom:50%;" />
+<img src="/assets/img/ml-线性模型/image-20240608233543353.png" alt="image-20240608233543353" style="zoom:50%;" />
 
 LDA的目标是使同类样本的投影点尽可能接近，则可以使同类样本投影点的协方差尽可能小，使不同的样本的投影点尽可能远离，则可以使类中心的距离尽可能大，用$\mu_0$和$\mu_1$表示两类样本的均值向量，$\Sigma_0$和$\Sigma_1$表示两类样本的协方差矩阵，有最大化目标函数
 
@@ -166,7 +166,7 @@ ECOC分为两步
 
 ECOC常见的有二元码和三元码，类别和类别划分组成编码矩阵，其中1表示正类，-1表示负类
 
-![image-20240615181542891](/assets/img/机器学习-线性模型/image-20240615181542891.png)
+![image-20240615181542891](/assets/img/ml-线性模型/image-20240615181542891.png)
 
 a图中分类器f1的预测结果为$(-1,+1,-1,-1)$，f2的预测结果为$(+1,-1,+1,-1)$，f3的预测结果为$(-1,-1,+1,+1)$，f4的预测结果为$(+1,+1,-1,+1)$，f5的预测结果为$(+1,-1,+1,-1)$，对于C1类别组成了一个编码$(-1,+1,-1,+1,+1)$，使用该编码与测试样本的编码进行比较
 
