--- a/_posts/2024-06-21-ml-神经网络.md
+++ b/_posts/2024-06-21-ml-神经网络.md
@@ -15,7 +15,7 @@ date: 2024-06-21 17:08
 
 ## 神经元模型
 
-![image-20240620120441145](/assets/img/机器学习-神经网络/image-20240620120441145.png)
+![image-20240620120441145](/assets/img/ml-神经网络/image-20240620120441145.png)
 
 ## 感知机与多层网络
 
@@ -36,7 +36,7 @@ $$
 
 误差逆传播算法(BP)可用于训练多层前馈网络，也可训练递归神经网络
 
-![image-20240620124453947](/assets/img/机器学习-神经网络/image-20240620124453947.png)
+![image-20240620124453947](/assets/img/ml-神经网络/image-20240620124453947.png)
 
 除上图标记外，第j个输出神经元的阈值为$\theta_j$，第h个隐层神经元的阈值为$\gamma_h$
 
@@ -67,7 +67,7 @@ $$
 BP算法使用梯度下降策略，以目标的负梯度方向对参数进行调整，给定学习率$\eta$，计算输出层到隐层的权重$\omega_{hj}$的梯度
 
 $$
-\begin{align}
+\begin{aligned}
 \omega_{hj}&\leftarrow\omega_{hj}+\Delta\omega_{hj}\\
 \Delta\omega_{hj}&=-\eta\frac{\partial E_k}{\partial\omega_{hj}}\\
 \frac{\partial E_k}{\partial\omega_{hj}}&=\frac{\partial E_k}{\partial\hat y^k_j}\cdot\frac{\partial\hat y^k_j}{\partial\beta_j}\cdot\frac{\partial\beta_j}{\partial\omega_{hj}}\\
@@ -75,27 +75,27 @@ $$
 \frac{\partial E_k}{\partial\omega_{hj}}&=\frac{\partial E_k}{\partial\hat y^k_j}\cdot\frac{\partial\hat y^k_j}{\partial\beta_j}\cdot b_h\\
 记g_j&=-\frac{\partial E_k}{\partial\hat y^k_j}\cdot\frac{\partial\hat y^k_j}{\partial\beta_j}=-(\hat y^k_j-y^k_j)\hat y^k_j(1-\hat y^k_j)\\
 综上，\Delta\omega_{hj}&=\eta g_jb_h=\eta (y^k_j-\hat y^k_j)(\hat y^k_j-1)b_h
-\end{align}
+\end{aligned}
 $$
 
 $\theta_j$的梯度计算如下
 
 $$
-\begin{align}
+\begin{aligned}
 \Delta\theta_j&=-\eta\frac{\partial E_k}{\partial\theta_j}\\
 \frac{\partial E_k}{\partial\theta_j}&=\frac{\partial E_k}{\partial\hat y^k_j}\cdot\frac{\partial\hat y^k_j}{\partial\theta_j}=-(\hat y^k_j-y^k_j)\hat y^k_j(1-\hat y^k_j)=g_j\\
 \Delta\theta_j&=-\eta g_j
-\end{align}
+\end{aligned}
 $$
 
 类似可得
 
 $$
-\begin{align}
+\begin{aligned}
 e_h&=-\frac{\partial E_k}{\partial b_h}\cdot\frac{\partial b_h}{\partial \alpha_h}=b_h(1-b_h)\sum\limits^l_{j=1}\omega_{hj}g_j\\
 \Delta\nu_{ih}&=\eta e_hx_i\\
 \Delta\gamma_h&=-\eta e_h
-\end{align}
+\end{aligned}
 $$
 
 根据单个样本的误差来计算梯度并更新参数的BP算法称为标准BP算法，而使用整个数据集的累积误差(误差平均值)来更新参数的BP算法称为累积BP算法
