--- a/_posts/2024-03-08-KMP代码实现详解.md
+++ b/_posts/2024-03-08-KMP代码实现详解.md
@@ -356,4 +356,4 @@ bool repeatedSubstringPattern(string s) {
 
 KMP匹配的代码还是比较难理解的，其中关键是弄清i和j什么时候表示索引，什么时候表示长度，其次是要有递归的思想，理解j回退的原理，这两点弄清楚，KMP算法就算掌握了
 
-在理解next数组的基础上，可以灵活改变算法，用它求出我们想要的子串的最长重合前后缀，在利用最长重合前后缀的性质进行应用
+在理解next数组的基础上，可以灵活改变算法，用它求出我们想要的子串的最长重合前后缀，再利用最长重合前后缀的性质进行应用
