--- a/_posts/2024-06-08-ml-绪论.md
+++ b/_posts/2024-06-08-ml-绪论.md
@@ -2,11 +2,11 @@
 layout: post
 title: 《机器学习》——绪论
 categories:
-- Python
+- 人工智能
 - 机器学习
 tags:
+- 人工智能
 - 机器学习
-- Python
 math: true
 typora-root-url: ./..
 date: 2024-06-08 23:47
