--- a/_posts/2024-07-01-ml-集成学习.md
+++ b/_posts/2024-07-01-ml-集成学习.md
@@ -2,10 +2,10 @@
 layout: post
 title: 《机器学习》——集成学习
 categories:
-- Python
+- 人工智能
 - 机器学习
 tags:
-- Python
+- 人工智能
 - 机器学习
 - 集成学习
 typora-root-url: ./..
