--- a/_posts/2024-06-01-k短路算法.md
+++ b/_posts/2024-06-01-k短路算法.md
@@ -308,7 +308,7 @@ for k in range(1, 9):
 # 第8短路: ( path = [0, 3, 1, 2, 4], dist = 24 )
 ```
 
-## 算法测试
+## 算法应用
 
 下面是当时实现的地图应用的截图，背景的地图使用的是高德的地图，地图上的地点以及路线均是通过K短路算法计算得到，再使用高德的API绘制在地图上
 
