--- a/_posts/2024-06-08-ml-模型评估.md
+++ b/_posts/2024-06-08-ml-模型评估.md
@@ -2,10 +2,10 @@
 layout: post
 title: 《机器学习》——模型评估与选择
 categories:
-- Python
+- 人工智能
 - 机器学习
 tags:
-- Python
+- 人工智能
 - 机器学习
 - 模型评估与选择
 math: true
