--- a/_posts/2024-06-15-ml-线性模型.md
+++ b/_posts/2024-06-15-ml-线性模型.md
@@ -2,10 +2,10 @@
 layout: post
 title: 《机器学习》——线性模型
 categories:
-- Python
+- 人工智能
 - 机器学习
 tags:
-- Python
+- 人工智能
 - 机器学习
 - 线性模型
 typora-root-url: ./..
