--- a/_posts/2024-06-21-ml-神经网络.md
+++ b/_posts/2024-06-21-ml-神经网络.md
@@ -2,10 +2,10 @@
 layout: post
 title: 《机器学习》——神经网络
 categories:
-- Python
+- 人工智能
 - 机器学习
 tags:
-- Python
+- 人工智能
 - 机器学习
 - 神经网络
 typora-root-url: ./..
