--- a/_posts/2024-06-29-ml-贝叶斯.md
+++ b/_posts/2024-06-29-ml-贝叶斯.md
@@ -2,10 +2,10 @@
 layout: post
 title: 《机器学习》——贝叶斯分类器
 categories:
-- Python
+- 人工智能
 - 机器学习
 tags:
-- Python
+- 人工智能
 - 机器学习
 - 贝叶斯分类器
 typora-root-url: ./..
