fix: 图片链接错误

--- a/_posts/kotlin高级-协程/2024-04-13-kotlin高级-协程.md
+++ b/_posts/kotlin高级-协程/2024-04-13-kotlin高级-协程.md
@@ -481,7 +481,7 @@ flow.cancellable()
 
 Channel是一个并发安全的队列，可以实现多协程之间的通信
 
-![a4xq9-lj03q](/assets/a4xq9-lj03q.png)
+![a4xq9-lj03q](./assets/a4xq9-lj03q.png)
 
 ### 基本操作
 
