--- a/_posts/kotlin高级-反射/2024-03-10-kotlin高级-反射.md
+++ b/_posts/kotlin高级-反射/2024-03-10-kotlin高级-反射.md
@@ -27,7 +27,7 @@ Kotlin中可以直接使用java的反射，目前java反射的性能还是高于
 
 kotlin反射与java反射的类结构组成
 
-<img src="/assets/2020090521255954.png" alt="反射类结构图"  />
+<img src="./assets/2020090521255954.png" alt="反射类结构图"  />
 
 
 
