--- a/_posts/vue3-slot/2024-05-19-vue3-slot.md
+++ b/_posts/vue3-slot/2024-05-19-vue3-slot.md
@@ -18,7 +18,7 @@ date: 2024-05-19 15:51 +0800
 
 父模板中的插槽内容可以访问到父组件的数据作用域，但不能访问到子组件的数据作用域
 
-![插槽图示](./assets/img/vue3-slot/slots.CKcE8XYd.png)
+![插槽图示](./assets/slots.CKcE8XYd.png)
 
 ## 默认插槽
 
