--- a/_posts/回溯算法-理论基础/2024-03-18-回溯算法-理论基础.md
+++ b/_posts/回溯算法-理论基础/2024-03-18-回溯算法-理论基础.md
@@ -30,7 +30,7 @@ for (int i = 0; i < n; i++) {
 
 实际上它的穷举结果可以抽象成一棵树，如下图所示
 
-![image-20240318184028953](../assets/image-20240318184028953.png)
+![image-20240318184028953](./assets/image-20240318184028953.png)
 
 那么我们怎么使用递归+for循环实现这个穷举树呢，先给出代码
 
