--- a/_posts/xpath/2024-06-09-xpath.md
+++ b/_posts/xpath/2024-06-09-xpath.md
@@ -123,3 +123,6 @@ e.g. 对于下面的文档，选择其中的两个`price`节点
 ```
 
 当使用`//price`时会选择全部四个`price`节点，此时筛选节点`//price[1]`，对每个层级路径都会进行一次过滤，即筛选后选择了id为`book1-price1`和`book2-price1`的节点
+
+## lxml库
+
