--- a/_posts/cmake/2024-10-28-cmake.md
+++ b/_posts/cmake/2024-10-28-cmake.md
@@ -147,7 +147,7 @@ e.g
 
 在`main`目录中包含`lib1`和`lib2`两个目录，在`lib2`中包含`lib3`目录，`lib1`和`lib2`引用`lib3`，`lib2`引用`lib1`，`main`引用`lib2`
 
-<img src="assets/image-20231228213953628.png" alt="image-20231228213953628"  />
+<img src="assets/image-20231228213953628.png" alt="image-20231228213953628" style="zoom:67%;" />
 
 ``` cmake
 # 目录关系
@@ -160,7 +160,8 @@ add_executable(main main.cpp)
 target_include_directories(main PUBLIC ./lib2)
 target_link_libraries(main PUBLIC lib2)
 ```
-{: file=“main/CMakeLists.txt” }
+{: file='main/CMakeLists.txt'}
+
 
 ```cmake
 # 目录关系
@@ -174,8 +175,8 @@ target_include_directories(lib2 PUBLIC ../lib1)
 target_link_libraries(lib2 PUBLIC lib1)
 target_link_libraries(lib2 PUBLIC lib3)
 ```
+{: file='lib2/CMakeLists.txt'}
 
-{: file=“lib2/CMakeLists.txt” }
 
 ```cmake
 add_library(lib1 lib1.cpp)
@@ -184,12 +185,13 @@ add_library(lib1 lib1.cpp)
 target_include_directories(lib1 PUBLIC ../lib2/lib3)
 target_link_libraries(lib1 PUBLIC lib3)
 ```
-{: file=“lib1/CMakeLists.txt” }
+{: file='lib1/CMakeLists.txt'}
+
 
 ```cmake
 add_library(lib3 lib3.cpp)
 ```
-{: file=“lib3/CMakeLists.txt” }
+{: file='lib3/CMakeLists.txt'}
 
 ## 库
 
